--- a/src/App.css
+++ b/src/App.css
@@ -778,6 +778,14 @@ input[type="text"]:focus,
   transition-duration: 150ms;
 }
 
+.edit-button-active {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  --tw-text-opacity: 1;
+  color: rgb(88 80 236 / var(--tw-text-opacity));
+}
+
 .lws-edit:hover {
   --tw-text-opacity: 1;
   color: rgb(88 80 236 / var(--tw-text-opacity));
